# dead_code_analyzer

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  TODO.md  USER_DOC.md  dead_code_analyzer.install  dead_code_analyzer.opam  dune-project  opam  profile.ml
.github/workflows/: workflow.yml
check/: Makefile  aggregate.ml  check.ml  suite.ml
check/classic/: classic.exp  classic.ref
check/examples/: bar.mli  baz.ml  baz.mli  baz.mlopta  cond_sel.ml  cond_sel.mlopt  cond_sel.mlopta  foo.ml  foo.mli  foo.mlopta  (+26 more)
doc/: Makefile
docs/: USAGE.md  USER_DOC.md
examples/: Makefile  bar_fn.ml  baz.ml  baz.mli  cond_sel.ml  dune  exported.ml  foo.ml  foo.mli  fooFn.mli  functor.ml  functor.mli  if_end.ml  ifelse.ml  let-in.ml  let-test.ml  let_in.ml  matchopt.ml  mod_alias.ml  opt-in-opt.ml  opt_in_opt.ml  partial_opt.ml  record.ml  record.mli  unused-fn.ml  useless-opt.ml  variant.ml  variant.mli
man/: Makefile
results/: OPAM.verified  README.md  flow.confirmed  flow.pending  js_of_ocaml.pending  js_of_ocaml.verified
scripts/: bench.sh  compare_bench.ml  reref.sh
src/: .merlin  Makefile  deadArg.ml  deadArg.mli  deadCode.ml  deadCode.mli  deadCodeAnalyzer.ml  deadCommon.ml  deadFlag.ml  deadLexiFi.ml  deadLexiFi.mli  deadMod.ml  deadObj.ml  deadObj.mli  deadType.ml  deadType.mli  dead_code.ml  dune  state.ml  utils.ml  utils.mli
src/config/: config.ml  config.mli
src/state/: cmt.ml  cmt.mli  file_infos.ml  file_infos.mli  location_dependencies.ml  location_dependencies.mli  signature.ml  signature.mli  state.ml  state.mli
(+676 files in other folders)
